--- a/index.html
+++ b/index.html
@@ -10,6 +10,22 @@
   </head>
 <body>
 
+  <nav id="header-nav" class="navbar navbar-default">
+    <div class="container">
+      <div class="navbar-brand">
+        <h1>Food, LLC</h1>
+      </div> <!-- .navbar-brand-->
+
+      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#collapsable-nav" aria-expanded="false">
+        <span class="sr-only">Toggle navigation</span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+      </button>
+
+    </div> <!-- .container -->
+  </nav> <!-- #header-nav .navbar .navbar-default -->
+
   <!-- jQuery (Bootstrap JS plugins depend on it) -->
   <script src="js/jquery-2.1.4.min.js"></script>
   <script src="js/bootstrap.min.js"></script>
