--- a/index.html
+++ b/index.html
@@ -12,19 +12,40 @@
 
   <nav id="header-nav" class="navbar navbar-default">
     <div class="container">
-      <div class="navbar-brand">
-        <h1>Food, LLC</h1>
-      </div> <!-- .navbar-brand-->
+      <div class="navbar-header">
 
-      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#collapsable-nav" aria-expanded="false">
-        <span class="sr-only">Toggle navigation</span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-      </button>
+        <div class="navbar-brand">
+          <h1>Food, LLC</h1>
+        </div> <!-- .navbar-brand-->
+
+        <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#collapsable-nav" aria-expanded="false">
+          <span class="sr-only">Toggle navigation</span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+        </button>
+      </div> <!-- .navbar-header -->
+
+      <div id="collapsable-nav" class="collapse navbar-collapse">
+          <ul id="nav-list" class="nav navbar-nav navbar-right visible-xs">
+            <li>
+              <a href="#" class="text-center">Chicken</a>
+            </li>
+            <li>
+                <a href="#" class="text-center">Beef</a>
+            </li>
+            <li>
+              <a href="#" class="text-center">Sushi</a>
+            </li>
+          </ul><!-- #nav-list -->
+        </div><!-- .collapse .navbar-collapse -->
 
     </div> <!-- .container -->
   </nav> <!-- #header-nav .navbar .navbar-default -->
+
+  <div id="main-content" class="container">
+    <h1 class="text-center">Our menu</h1>
+  </div>
 
   <!-- jQuery (Bootstrap JS plugins depend on it) -->
   <script src="js/jquery-2.1.4.min.js"></script>
