Optional devs completed
Well done commander !

--- a/index.html
+++ b/index.html
@@ -9,8 +9,6 @@
     <link rel="stylesheet" href="css/styles.css">
   </head>
 <body>
-  <!-- Is it optinal_devs branch ? -->
-
   <nav id="header-nav" class="navbar navbar-default">
     <div class="container">
       <div class="navbar-header">
@@ -30,13 +28,13 @@
       <div id="collapsable-nav" class="collapse navbar-collapse">
           <ul id="nav-list" class="nav navbar-nav navbar-right visible-xs">
             <li>
-              <a href="#" class="text-center">Chicken</a>
+              <a href="#food-chicken" class="text-center">Chicken</a>
             </li>
             <li>
-                <a href="#" class="text-center">Beef</a>
+                <a href="#food-beef" class="text-center">Beef</a>
             </li>
             <li>
-              <a href="#" class="text-center">Sushi</a>
+              <a href="#food-sushi" class="text-center">Sushi</a>
             </li>
           </ul><!-- #nav-list -->
         </div><!-- .collapse .navbar-collapse -->
@@ -48,7 +46,7 @@
     <h1 class="text-center">Our menu</h1>
 
     <div id="chicken-block" class="row">
-      <div class="col-xs-12 col-sm-6 col-md-4">
+      <div id="food-chicken" class="col-xs-12 col-sm-6 col-md-4">
         <div class="food-stuff">
           <h3 class="text-center">Chicken</h2>
           <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vitae rhoncus massa. Praesent viverra id 
@@ -78,7 +76,7 @@
           <p class="back-to-top text-right"><a href="#header-nav">Back to top</a></p>
         </div> <!-- .food-stuff -->
       </div> <!-- .col-xs-12 .col-sm-6 .col-md-4 for chicken-->
-      <div class="col-xs-12 col-sm-6 col-md-4">
+      <div id="food-beef" class="col-xs-12 col-sm-6 col-md-4">
         <div class="food-stuff">
           <h3 class="text-center">Beef</h2>
           <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vitae rhoncus massa. Praesent viverra id 
@@ -108,7 +106,7 @@
           <p class="back-to-top text-right"><a href="#header-nav">Back to top</a></p>
         </div> <!-- .food-stuff -->
       </div> <!-- .col-xs-12 .col-sm-6 .col-md-4 for Beef-->
-      <div class="col-xs-12 col-sm-12 col-md-4">
+      <div id="food-sushi" class="col-xs-12 col-sm-12 col-md-4">
         <div class="food-stuff">
           <h3 class="text-center">Sushi</h2>
           <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vitae rhoncus massa. Praesent viverra id 
